addComments
